# chess2gif-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.rst  pyproject.toml
.github/workflows/: main.yml
chess_bot/: bot.py  cli.py
tests/: conftest.py  test_bot.py
